--- a/document.tex
+++ b/document.tex
@@ -1,8 +1,4 @@
 \documentclass[a4paper, 12pt]{report}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% author{Bekhelifa A Djelfa le 06/05/2022} % نموذج لصفحة غلاف مذكرة يمكن التعديل عليه
-%%%%     compiler pdfLaTeX
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 %-----------------------------------------------------------------------  01
 \usepackage[pdftex]{graphicx}
@@ -12,6 +8,7 @@
 \usepackage[utf8]{inputenc} 
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
+
 %-----------------------------------------------------------------------   03
 \linespread{1.5}
 
@@ -59,6 +56,7 @@
 			
 			{\bf Encadré par :}\\
 			{Dr. Cheikh Dhib} \\
+			{Mr. Mboirick Mohamed} \\
 			{\bf Réalisé au sein de CADORIM }
 			
 			
@@ -69,14 +67,54 @@
 			\includegraphics[width=150px]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/cado_logo.png}
 		} 
 		\end{figure}
-		\vspace{1cm}
+		
 		\begin{center}
 			Année universitaire 2021-2022
 		\end{center}
 		%--------------------------------------------------------------------------- 08
-	
-		
 	\end{titlepage}
-	page de garde
+		\chapter*{DEDICACES} \label{chap:1Dedicaces}
+		\addcontentsline{toc}{chapter}{DEDICACES} 
+		Les mots ne sauront traduire ce qui est dans le cœur, mais je vais rassembler mon vocabulaire et dire : je dédie cet humble travail à mes chers parents pour leur soutien tout au long de mon parcours universitaire, qui ont été les encouragements dans les moments de détresse, l'exhortation en période de prospérité, le soutien lors de la chute et le guide lors de la montée, qui n'a pas hésité un instant à m'aider jusqu'à ce que j'ai arrivé là où je suis maintenant. Tous les remerciements et gratitudes ne remplissent pas leur droit, mais je peux seulement dire ce que Dieu nous a commandé de faire dans le noble verset, sa signification
+			\textbf{<< Dis, mon Seigneur, aie pitié d'eux comme ils m'ont élevé quand j'étais jeune >>}
+		\thispagestyle{empty} 
+		\chapter*{REMERCIEMENTS} \label{chap:1REMERCIEMENTS}
+		\addcontentsline{toc}{chapter}{REMERCIEMENTS} 
+		\textit{
+			Ce n’est pas parce que la tradition l’exige que cette page se trouve dans ce rapport, mais par ce que les gens à qui s’adressent mes remerciements les méritent vraiment.
+			\newline
+			J’adresse mes remerciements les plus chaleureux envers : 
+			\begin{enumerate}
+				 \item[•] \textbf{Dr. Cheikh Dhib,} l'ancien coordinateur de MPIAG, ainsi que \textbf{Dr. Emani Mohamed Sidi} le nouveau coordinateur et l’ensemble du corps
+				 professoral et administratif de l’ISCAE.
+				 Et pour avoir suivi et dirigé l’évolution de mon travail, ainsi que les encouragements, conseils et orientations réguliers qu’il m’a prodigué.
+				 Je vous suis infiniment reconnaissant pour votre grande disponibilité et l’intérêt que vous avez porté à ce travail;
+				  \item[•] \textbf{Mr. Mboirick Mohamed, } responsable technique et mon maître de stage, pour sa disponibilité, sa gentillesse, son attention particulière à l’égard de ce travail.
+				  Et pour avoir mis les moyens nécessaires au bon déroulement de ce stage de six mois et à la réalisation de ce travail;
+				  Je vous suis infiniment reconnaissant pour votre grande disponibilité et l’intérêt que vous avez porté à ce travail;
+			\end{enumerate}
+			Toutes les personnes qui de près ou de loin, ont contribué à la réalisation de ce travail.
+		 }
+	 \thispagestyle{empty}
+	 \chapter*{AVANT-PROPOS} \label{chap:1AVANT-PROPOS}
+	\addcontentsline{toc}{chapter}{AVANT-PROPOS}
+	L’Institut Supérieur de Comptabilité et d’Administration des Entreprises est un établissement public d’enseignement supérieur et de recherche, placé sous la tutelle du Ministère en charge de l’Enseignement Supérieur, crée en 2009, par décret N° 2009-161 du 29 avril 2009.
+	\newline
+	L’ISCAE compte deux (2) départements et dans le cadre de leur formation, les étudiants qui sont en fin de cycle sont tenus d’effectuer un stage pratique au sein d’une entreprise ou d’un service informatique.
+	\thispagestyle{empty}
+	\chapter*{RESUME} \label{chap:1Resumé}
+	\addcontentsline{toc}{chapter}{RESUME}
+	Ce document présente les travails suivants :
+	\begin{enumerate}
+		\item Mise en place d’un système d’extration des donnees à partir des images et traitement des ces donnees.
+		\item Elaboration d’un système de verificitation des donners KYC pour lutter contre les fraudes a la carte bancaire.
+		\item Tracking de l’activite d’un client sur une application.
+		\item Mise en place d’un système de messagerie instantané ( Live chat ).
+		\item Système pour suivre les demandes de clients, de la soumission juqu’au traitement et l’archivage.
+		\item Mise en place d’un système de repporting et de monitoring.
+		\item Mise en place d’un système de notification automatique.
+		\item La documention.
+	\end{enumerate}
+	
 	
 \end{document}
