modifaction de ch1 et la creation de ch 2 et 3

--- a/Template LaTeX/TeXFiles/Introduction.tex
+++ b/Template LaTeX/TeXFiles/Introduction.tex
@@ -3,22 +3,34 @@
 \chapter{Introduction générale}
 \label{sec:DescriptionDuProjet}
 
-%Dans cette section, je propose de voir dans un premier temps le contexte du sujet. Ensuite je ferais état de la problématique pour finir avec les objectifs à atteindre.
+Savoir qui est votre client et adopter des protocoles pour prévenir la criminalité financière sont des défis permanents pour les institutions financières. De manière significative, les institutions financières (y compris les banques, les coopératives de crédit et les sociétés financières du Fortune 50) doivent se conformer à un ensemble de réglementations de plus en plus complexes pour la vérification de l'identité des clients appelée KYC.
 
-%\section{Contexte du projet}
-La mise en relation entre les patients et les consultants médicaux consiste à collecter des informations sur eux, plus précisément leurs horaires disponibles pour faire des consultations aux maisons des patients. Comme ça nous offrons aux patients la possibilité de savoir les consultants médicaux disponibles à chaque instant.
-\newline\newline Le fait de lier le patient et le consultant médical, a un double avantage, d'une part, pour le patient, car il va il peut savoir facilement des consultants médicaux disponibles, et d'autre part, pour le consultant, car il va obtenir un travail supplémentaire. Comme l'intitule du mémoire l'indique, notre Objectif est justement de lier les deux pôles de la problématique (Patient et Consultant médical).
+KYC, également connu sous le nom de "Know Your Customer" ou "Know Your Client", est un ensemble de procédures permettant de vérifier l'identité d'un client avant ou pendant les transactions avec les banques et autres institutions financières. Le respect des réglementations KYC peut aider à tenir à distance le blanchiment d'argent, le financement du terrorisme et d'autres stratagèmes de fraude courants. En vérifiant d'abord l'identité et les intentions d'un client au moment de l'ouverture du compte, puis en comprenant ses habitudes de transaction, les institutions financières sont en mesure d'identifier plus précisément les activités suspectes. 
+
+Les institutions financières sont soumises à des normes de plus en plus strictes en matière de lois KYC. Ils doivent dépenser plus d'argent pour se conformer à KYC ou être passibles de lourdes amendes. Ces réglementations signifient que presque toutes les entreprises, plateformes ou organisations qui interagissent avec une institution financière pour ouvrir un compte ou effectuer des transactions devront se conformer à ces obligations.
+
+La gestion de la relation client (CRM) est la combinaison de pratiques, de stratégies et de technologies que les entreprises utilisent pour gérer et analyser les interactions et les données client tout au long du cycle de vie du client. L'objectif est d'améliorer les relations de service client, de contribuer à la fidélisation de la clientèle et de stimuler la croissance des ventes. Les systèmes CRM compilent les données client à travers différents canaux, ou points de contact, entre le client et l'entreprise, qui peuvent inclure le site Web de l'entreprise, le téléphone, le chat en direct, le publipostage, les supports marketing et les réseaux sociaux. Les systèmes CRM peuvent également donner aux membres du personnel en contact avec les clients des informations détaillées sur les informations personnelles des clients, l'historique des achats, les préférences et les préoccupations d'achat.
+
 
 \section{Motivations}
 
-La demande de services médicaux devient de plus en plus importante en Mauritanie en tenant compte ceux qui nécessitent des visites à domicile. Les rendez-vous sont toujours organisés par des appels téléphoniques ou via les applications de messagerie, ce qui les rendent plus lents en terme d'organisation dû à l'existence d'un nombre peu important des fournisseurs connus de ces services ce qui n'est pas expliqué par la rareté de ces fournisseurs de façon général.
+KYC est un moyen de rendre la vérification de l'identité des clients plus précise et moins vulnérable à la fraude.
+
+KYC doivent être effectuées lors de l'intégration d'un nouveau client, mais il est préférable de répéter ces vérifications de temps en temps, pour s'assurer que tout est comme il se doit. En surveillant les comptes clients de cette manière, les comportements suspects peuvent être signalés plus rapidement.
+
+Un système CRM fournit des flux de travail automatisés qui permettent à votre équipe marketing de consacrer plus de temps à des tâches stratégiques, telles que la création de campagnes marketing qui résonnent, l'analyse des données de ces campagnes et le test de différentes approches basées sur ces analyses. Les agents du service client peuvent passer leur temps à travailler avec des clients qui ont des questions, des problèmes ou des besoins plus complexes. En bref, avec des processus de service client plus efficaces, les entreprises peuvent établir de meilleures relations avec leurs clients.
 
 \section{Problématiques}
 
-En réalité, la réalisation d’une application, fournissant les services sanitaires nécessaires, nécessite de faire face à des problématiques diverses et complexes. Ainsi, la société a décidé de se contenter, dans un premier temps, de la thématique de gestion des rendez-vous médicaux a domicile. \newline
-Ce sujet soulève de nombreuses questions aux implications différentes. Tout d'abord que signifie un « Consultant médical » ?, le patient pourrait-il rechercher une consultant médical disponible ? Quelle procédure le patient doit-il suivre pour demander une consultation ? Comment pourrait-il payer les frais de consultation ? Comment pourrait-il reporter une consultation ?
+En réalité, la réalisation d'une application,qui applique le principe de KYC et integre un  système CRM,
+nécessite
+de faire face à des problématiques diverses et complexes. Ainsi, la société a décidé de se contenter,
+dans un premier temps, Mise en place d’un système d’extration des donnees à partir des images et traitement des ces donnees(carte d'identité ou passeport).
+Ce sujet soulève de nombreuses questions aux implications différentes. Comment peut extraire le texte apartir de l'image? Comment sera-t-il traité ? Comment peut-il être utilisé dans le principe KYC ? Comment pouvons-nous obtenir un système CRM intégré ?
 
 
 \section{Objectifs}
 
-La mise en relation entre les fournisseurs de services et les consommateurs (clients de façon générale) est un des services offerts par SMPNT. La société veut offrir un meilleur service aux clients à l'aide d'une application mobile qui gère la relation entre les patients et les consultants médicaux. Autrement dit, l'application permet d'organiser des rendez-vous à domicile.
+La mise en place d'une application pour appliquer l'ide de KYC en basant sur les différent technologie disponible . En basan sur l'extraction du text apartir d'une imange OCR on peut extracter la code MRZ apartir d'une imange du piece d'idendite ou passport est passe le code a un algorithem qui permer de d'etecter les information personnel.
+
+
