--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -1,47 +1,33 @@
-\let\cleardoublepage\clearpage
-
-\chapter{Présentation de la société}
+	\chapter{Présentation de la société}
 \label{chap:introduction}
-
 \pagenumbering{arabic}
-
-Il s’agit là de présenter de manière globale la structure de la Société Mauritanienne pour les Nouvelles Technologies(SMPNT) en premier, pour ensuite dérouler ses missions et domaines d’activités, et enfin exposer son organisation interne.
-
 \section{Introduction}
 \begin{figure}[h]
-	\includegraphics[scale=0.5]{D:/NTFS 3/Mon_master/M2/S4/images/SMPNT}
+	\includegraphics[scale=0.14]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/cado_logo.png}
 	\centering
-	\caption{SMPNT}
+	\caption{CADOROM}
 \end{figure}
-Société Mauritanienne Pour les Nouvelles Technologies (SMPNT) est une société Mauritanienne spécialisée dans les domaines des ingénieries informatiques, fondée au début de l'été 2018. SMPNT propose un ensemble de services autour des technologies orientées objets, des architectures orientées services (SOA) ou de l’intégration d’applications d’entreprise (EAI). SMPNT met à la disposition de ses clients des solutions éprouvées pour la réalisation d’applications. Elle intervient également d’un point de vue organisationnel, méthodologique et technique depuis la phase de conseil jusqu’à la mise en œuvre de la solution tout en assurant l’accompagnement des équipes clientes dans leur montée en compétences.
+CADORIM est une société de transfert d’argent mauritanienne basée à Nouakchott,
+fondée fin 2018 par un entrepreneur mauritanien, titulaire d'un doctorat en
+mathématiques,
+CADORIM consiste a transférer de l’argent depuis n’importe quel pays dans le
+monde vers ses proches en Mauritanie. Notre objectif et de fourni une plateforme
+numérique permet à l’utilisateur de régler ses commandes en toute sécurité et
+confidentialité assurée par le service de PayPal qui est mondialement connu pour sa
+fiabilité et simplicité.t Pour effectuer un paiement il suffit d'une simple carte bancaire
+ou un compte PayPal . et une éventuelle possibilité de virement bancaire.
+CADORIM a été élu comme le champion de Banque Centrale de Mauritanie (BCM )
+1ère édition 2019 Fintech Challenge,
+Le siège social de CADORIM est situé à marche capital , Nouakchott, Mauritanie,
+immatriculée au registre du commerce.
 \section{Missions}
-SMPNT offre une large palette de prestations organisées autour des activités suivantes :
+CADORIM offre une large palette de prestations organisées autour des activités suivantes :
 \begin{enumerate}
-	\item Conception et Développement complet des solutions SI personnalisées
-	\item (Client/serveur, Intranet, Web)
-	\item Vente matériel informatique
-	\item Maintenance
-	\item Assistance technique sur l'ensemble des produits EBP Gestion
-	\item Audit orienté système d’information et de gestion
-	\item Intégration et implémentation d'applications de gestion pour l'entreprise
-	\item Développement et mise en place de solution de gestion des documents électroniques GED.
+	
+	\item Maintenance et amélioration de leurs propres applications (CadoRim et MauriPay)
+	\item Développement des applications 
+	\item Des agences des reçoivent d'argent et de service client
+	
 \end{enumerate}
 
-\section{Organigramme}
-La structure organisationnelle de SMPNT comprend :
-\begin{enumerate}
-	\item Une direction générale qui coiffe toutes les unités de la société et qui définit la vision stratégique à adopter en vue de pleinement remplir leurs missions.
-	\item Un assistanat de direction qui se charge d’assister et d’aider la direction générale dans sa politique de bonne gestion de la société
-	\item Une comptabilité
-	\item Une équipe commerciale
-	\item Une équipe technique et fonctionnelle chargée de la mise en œuvre des missions de SMPNT et constituée
-	\item D’une équipe fonctionnelle dont le rôle est de fournir à l'équipe technique toute la logique métier pour parvenir à la réalisation des produits
-	\item D’un team leader dont la mission est de proposer et concevoir des architectures de projet en collaboration avec l'équipe fonctionnelle et l'équipe de développeurs
-	\item Des développeurs qui se chargent de la réalisation des solutions logicielles
-\end{enumerate}
-\begin{figure}[h]
-	\includegraphics{D:/NTFS 3/Mon_master/M2/S4/images/Capture}
-	\centering
-	\caption{Organigramme de SMPNT}
-\end{figure}
-%Après cette présentation globale de la structure d'accueil, j'attaquerais à une présentation du sujet de ce mémoire.
+
